<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".management.transaction.tablet.ManageTransactionFragment">

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            android:layout_marginEnd="8dp"
            android:id="@+id/listTransactions"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline6"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33"/>

    <TextView
            android:text="@string/customer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline7"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.57"/>

    <TextView
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline8"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline8"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.36"/>

    <TextView
            android:text="@string/balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
            android:text="@string/product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
            android:text="@string/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
            android:text="@string/stock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
            android:text="@string/transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
            android:text="@string/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView18"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtCustomerName"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtCustomerBalance"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toEndOf="@+id/textView3"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtProductName"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtProductPrice"
            app:layout_constraintTop_toTopOf="@+id/textView9"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtProductStock"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
            android:text="@string/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView18"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtTransactionDate"
            app:layout_constraintStart_toEndOf="@+id/textView18"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView18"
            app:layout_constraintBottom_toBottomOf="@+id/textView18"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtTransactionStatus"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <Button
            android:text="@string/revoke"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnRevoke"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTransactionStatus"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            android:layout_marginEnd="8dp"
            style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
            android:text="@string/open"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/btnOpen"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.524"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnRevoke"/>

    <Button
            android:text="@string/close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnClose"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTransactionStatus"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            android:layout_marginStart="8dp"
            />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline9"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.78"/>
</androidx.constraintlayout.widget.ConstraintLayout>