<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/linearLayout"
        android:layout_marginBottom="8dp">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            android:layout_marginTop="16dp"/>


    <Button
            android:text="@string/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editPassword"
            app:layout_constraintEnd_toStartOf="@+id/btnAccept"
            android:layout_marginEnd="8dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    <Button
            android:text="@string/dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAccept"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editPassword"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    <TextView
            android:text="@string/dialog_enter_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>


</androidx.constraintlayout.widget.ConstraintLayout>